--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- first section -->
-    <div class="container-fluid " id="first">
+    <div class="container-fluid" id="first">
         <div class="row">
             <div class="col-md-12">
                 <img src="/images/logo.png" alt="">
@@ -40,5 +40,25 @@
                     <img src="/images/mouse_click.png" alt="">
             </div>
     </div>
+
+    <!-- section two -->
+             <div class="container-fluid" id="second">
+                <strong><h1>ABOUT US</h1></strong>
+                <p>
+                  When you work with us, you are part of a team of committed collaborators. All aspects of our software development process are intergrated, interactive and agile.<br>
+                  Our approach unites design, development an product management to create exceptional products.<br>
+                  We start each project by understanding your business goals, there's needs and the the product requirements.<br>
+                  Then we help translate them into effective and elegant solutions.
+                </p>
+            </div>
+            <div class="container-fluid" id="third">
+              <h1>SERVICES</h1>
+              <p>
+                Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision.<br>
+                The outcome of the scoping session is a proposal or high-level statement of work.<br>
+                Based on your requirements, we can provide a complete offering or just the pieces you need.
+              </p>
+            </div>
+            </div>
 </body>
 </html>
