--- a/index.html
+++ b/index.html
@@ -42,23 +42,32 @@
     </div>
 
     <!-- section two -->
-             <div class="container-fluid" id="second">
-                <strong><h1>ABOUT US</h1></strong>
-                <p>
-                  When you work with us, you are part of a team of committed collaborators. All aspects of our software development process are intergrated, interactive and agile.<br>
+    <div class="container-fluid" id="second">
+        <strong><h1>ABOUT US</h1></strong>
+            <p>
+              When you work with us, you are part of a team of committed collaborators. All aspects of our software development process are intergrated, interactive and agile.<br>
                   Our approach unites design, development an product management to create exceptional products.<br>
                   We start each project by understanding your business goals, there's needs and the the product requirements.<br>
                   Then we help translate them into effective and elegant solutions.
                 </p>
-            </div>
-            <div class="container-fluid" id="third">
+    </div>
+          <div class="container-fluid" id="third">
               <h1>SERVICES</h1>
               <p>
                 Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision.<br>
                 The outcome of the scoping session is a proposal or high-level statement of work.<br>
                 Based on your requirements, we can provide a complete offering or just the pieces you need.
               </p>
-            </div>
-            </div>
+          </div>
+
+          <!-- section three -->
+      <div class="container-fluid" id="fourth">
+        <div class="row">
+          <div class="col-md-12">
+            <h1>WHAT WE DO</h1>
+          </div>
+        </div>
+      </div>
+                
 </body>
 </html>
