add current structure

--- a/index.html
+++ b/index.html
@@ -143,8 +143,43 @@
             </div>
           </div>
 
+          <!-- section five --contact us -->
+        <div class="container" id="contact">
+          <div class="row">
+            <div class="col-md-12">
+              <h3>CONTACT US</h3>
+                <div id="contact" class="container-fluid d-flex flex-wrap align-content-center justify-content-around">
+                  <form action="" class="" id="submission">
+                    <input type="text" placeholder="Enter Name">
+                    <input type="email" name="" id="mail" placeholder="Enter Email">
+                    <textarea name="" id="" cols="10" rows="5" placeholder="Message (optional)"></textarea>
+                    <input type="submit">
+                  </form>
+                </div>
+            </div>
+          </div>
+        </div>
 
 
+        <div class="container" >
+          <div class="row">
+            <div class="col-10">
+             <div class=" row justify-content-center footer">
+              <a href="https://twitter.com/"><img src="/images/twitter.png"></a>
+              <a href="https://dribbble.com/"><img src="/images/dribble.png"></a>
+              <a href="https://www.facebook.com/"><img src="/images/facebook.png"></a>
+              <a href="https://aboutme.google.com/u/0/?referer=gplus"><img src="/images/g_plus.png"></a>
+              <a href="https://www.skype.com/en/features/skype-web/"><img src="/images/skype.png"></a>
+              <a href="https://www.stumbleupon.com/"><img src="/images/stumble_upon.png"></a>
+              <a href="https://www.behance.net/"><img src="/images/behance.png"></a>
+              <a href="https://www.pinterest.com/"><img src="/images/pinterest.png"></a>
+             <a href="https://www.flickr.com/"><img src="/images/flickr.png"></a>
+             <a href="https://www.youtube.com/"><img src="/images/you_tube.png"></a>
+            </div>
+           </div>
+           
+          </div>
+      </div>
 
 
       <script
